src/objects/Content_Version__c.object
<CustomObject><fields>
        <fullName>Atom_Title__c</fullName>
        <description>Public display title on the web. If this field is blank, the Atom Name can used as the display title.</description>
        <inlineHelpText>Public display title on the web. If this field is blank, the Atom Name can used as the display title.</inlineHelpText>
        <label>Atom Title</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Atom__c</fullName>
        <description>Parent Atom / Currently Published Atom</description>
        <inlineHelpText>Parent Atom / Currently Published Atom</inlineHelpText>
        <label>Published Version</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Content__c</fullName>
        <description>The Atom Body (Formatting should be done here)</description>
        <inlineHelpText>The Atom Body (Formatting should be done here)</inlineHelpText>
        <label>Atom</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Publishing_Status__c</fullName>
        <description>Publishing Status (Controlled by Atom Approval Process)</description>
        <inlineHelpText>Publishing Status</inlineHelpText>
        <label>Publishing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Draft: Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft: Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Version__c</fullName>
        <description>If Status = 'Draft', then Version = Draft Version 
If Status = 'Draft: Submitted for Approval', then Version = 'Draft Version' 
If Status = 'Online', then Version = 'Version 1'</description>
        <formula>IF ((ISPICKVAL(Publishing_Status__c, "Online")) &amp;&amp; (Atom__r.LMOV__c = LastModifiedDate), IF (Version_Number__c = 'Version 1', Version_Number__c, "Version" + " " + Version_Number__c),
IF (NOT(ISPICKVAL(Publishing_Status__c, 'Draft: Rejected')), 
IF ( (Version_Number__c = TEXT(MAX(Atom__r.Version_Number__c))) || (NOT(ISPICKVAL(Publishing_Status__c, "Online"))) || (Atom__r.Version__c = 'Version 1') || ((ISPICKVAL(Publishing_Status__c, "Online")) &amp;&amp; (Atom__r.LMOV__c = LastModifiedDate)), 
(IF ( CONTAINS (Version_Number__c, "Version"), Version_Number__c, "Version" + " " + Version_Number__c)), 
(IF ( CONTAINS (Version_Number__c, "Version"), Version_Number__c, "Version" + " " + Version_Number__c) ) + " (Outdated)"), 
(IF ( CONTAINS (Version_Number__c, "Version"), Version_Number__c, "Version" + " " + Version_Number__c) ) + " (Rejected)"))</formula>
        <inlineHelpText>Version Number</inlineHelpText>
        <label>Atom Version</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Content Version</label><nameField>
        <label>Atom Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Content Versions</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Atom_Title__c</columns>
        <columns>Atom__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Content_Version</fullName>
        <active>true</active>
        <description>Modifiable / Editable View of an Atom - With 'Edit and 'Submit for Approval' buttons</description>
        <label>Content Version</label>
    </recordTypes><recordTypes>
        <fullName>Published_Content_Version</fullName>
        <active>true</active>
        <description>Online View of an Atom - No buttons</description>
        <label>Published Content Version</label>
    </recordTypes></CustomObject>